--- a/scaffolds/simple/public/manifest.json
+++ b/scaffolds/simple/public/manifest.json
@@ -9,7 +9,7 @@
         "128":"image/favicon.png"
     },
     "browser_action": {
-        "default_popup": "index.html",
+        "default_popup": "dashboard.html",
         "default_icon": "image/favicon.png",
         "default_title": "这是一个Chrome插件"
       },
@@ -20,17 +20,21 @@
     ],
     "content_scripts": [{
         "matches": [
+            "<all_urls>",
             "http://*/*",
             "https://*/*"
         ],
         "js": [
-            "lib/jquery3.4.min.js",
-            "content_script.js"
+            "js/vendor.js",
+            "js/content.js"
         ],
-        "css": ["base.css"]
+        "css": [
+            "css/content.css"
+        ],
+        "run_at": "document_end"
     }],
     "background": {
         "persistent": false,
-        "scripts": ["background.js"]
+        "scripts": ["js/vendor.js","js/background.js"]
     }
 }
