--- a/scaffolds/ice-electron/package.json
+++ b/scaffolds/ice-electron/package.json
@@ -72,7 +72,11 @@
       "output": "dist"
     },
     "files": [
+      "./main.js",
+      "./package.json",
       "build/**/*"
     ]
+
+
   }
 }
